[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sushmitha047 <hssushmitha047@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
jupyter = "^1.1.1"
pandas = "<2.2.0"
pyarrow = "^19.0.0"
tqdm = "^4.67.1"
plotly = "^5.24.1"
scikit-learn = "1.5.2"
xgboost = "1.7.6"
lightgbm = "^4.5.0"
optuna = "^4.2.0"
python-dotenv = "^1.0.1"
confluent-kafka = "^2.8.0"
streamlit = "^1.41.1"
geopandas = "^1.0.1"
hopsworks = "^4.1.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
